--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Using Frontend Masters I am completing a Python fundamentals course taught by Nina Zakharenko. The link to the course outline is here: https://www.learnpython.dev/
+Using Frontend Masters I am completing a Python fundamentals course taught by Nina Zakharenko. 
+The link to the course outline is here: https://www.learnpython.dev/
+Please go to the branch named 'python' to see how I followed along with lectures and my work when completing exercises. 
