--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # Python Fundamentals
 
-I am in the process of completing a Frontend Masters course on Python fundamentals taught by Nina Zakharenko using VS code. These are the topics being covered during the course:
+I am in the process of completing a Frontend Masters course on Python 3 fundamentals taught by Nina Zakharenko using VS code. These are the topics being covered during the course:
   - Data Types
   - Functions
   - Lists
